--- a/users/oskar/i3/config
+++ b/users/oskar/i3/config
@@ -11,6 +11,13 @@
 
 set $mod Mod4
 
+# Start compositor
+exec --no-startup-id picom
+
+# Wallpapers
+set $wp ~/pics/wallpapers/visar-neziri-CAQvwCoHLhw-unsplash.jpg
+exec_always --no-startup-id feh --bg-scale $wp
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:Hack Regular 12
@@ -39,6 +46,10 @@ bindsym XF86AudioPlay exec playerctl play
 bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
+
+# Use xbacklight for for brightness buttons
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -216,10 +227,5 @@ hide_edge_borders smart_no_gaps
 # Gaps
 gaps inner 15
 
-exec picom
-
-# Wallpapers
-set $wp ~/pics/wallpapers/visar-neziri-CAQvwCoHLhw-unsplash.jpg
-exec_always feh --bg-scale $wp
 exec betterlockscreen -u $wp --fx blur
 
