--- a/home/config/picom/picom.conf
+++ b/home/config/picom/picom.conf
@@ -8,22 +8,20 @@
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = false;
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 18;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = -15
 
 # The top offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = -15
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -44,12 +42,60 @@ shadow-offset-y = -7;
 #
 # shadow-exclude = []
 shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
+  "class_g = 'Rofi'",
   "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'Rofi'"
+  # Removed to avoid no-shadow in modal dialog windows.
+  "name = 'Notification'",
+  "name = 'Plank'",
+  "name = 'Docky'",
+  "name = 'Kupfer'",
+  "name = 'Pensela'",
+  "name = 'Drawing Board'",
+  #
+  # Workaround for VirtualBox empty window at launching
+  "name = 'VirtualBox'",
+  "name = 'VirtualBoxVM'",
+  #
+  # Avoid shadow in Negatron popups
+  "name = 'Negatron v0.100.1' && argb",
+  #
+  # Avoid shadow for the XFCE alt tab TaskSwitcher
+  "name ?= 'xfwm4' && argb",
+  #
+  # "name *= 'compton'",
+  "class_g = 'Conky'",
+  "class_g = 'Kupfer'",
+  "class_g = 'Synapse'",
+  "class_g ?= 'Notify-osd'",
+  "class_g ?= 'Cairo-dock'",
+  "class_g = 'Cairo-clock'",
+  "class_g ?= 'Xfce4-notifyd'",
+  #
+  # Exclude special Firefox/Firefox-esr/Thunderbird dropdowns.
+  # Ref: https://github.com/chjj/compton/issues/247
+   "class_g = 'Thunderbird' && argb",
+   "class_g = 'Telegram' && argb",
+   "name ?= 'Thunderbird' && (window_type = 'utility' || window_type = 'popup_menu')",
+  #
+  # Exclude some special popup menu shadows, but Modal Windows.
+  # These are more finetuning thant previous ones:
+  "class_g ?= 'Thunderbird' && class_i = 'Popup' && argb",
+  "class_g = 'firefox' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
+  "class_g = 'Firefox' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
+  "class_g = 'firefox-esr' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
+  "class_g = 'Firefox-esr' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
+  "class_g = 'Tor Browser' && (window_type = 'utility') && argb",
+  "class_g = 'Navegador Tor' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
+  "class_g = 'Thunderbird' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
+  "class_g = 'Mozilla Thunderbird' && (window_type = 'utility' || window_type = 'popup_menu') && argb",
+  "class_g ?= 'Xfce4-power-manager'",
+  # 
+  # Exclude Vokoscreen and VokoscreenNG area selector
+  #
+  "class_g ?= 'vokoscreen' && argb",
+  "name = 'Área'",
+  "name *= 'Cuenta regresiva'",
+  "_NET_WM_WINDOW_TYPE:a *= '_KDE_NET_WM_WINDOW_TYPE_OVERRIDE'"
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -114,7 +160,7 @@ inactive-opacity = 0.90;
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.98
+active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.18
@@ -134,9 +180,9 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 # "100:class_g = 'Code'"
 opacity-rule = [
-  "98:class_g = 'firefox'",
-  "90:class_g = 'kitty' && focused",
-  "75:class_g = 'kitty' && !focused",
+  "100:class_g = 'firefox'",
+  "100:class_g = 'kitty' && focused",
+  "90:class_g = 'kitty' && !focused",
   "95:class_g = 'Code' && focused",
   "85:class_g = 'Code' && !focused",
 ]
@@ -155,6 +201,7 @@ corner-radius = 18
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
+  # "window_type = 'popup_menu'",
   "class_g = 'Rofi'"
 ];
 
@@ -177,7 +224,7 @@ blur-method = "dual_kawase"
 #
 # blur-deviation = false
 #
-blur-strength = 6
+blur-strength = 12
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
@@ -208,9 +255,16 @@ blur-kern = "3x3box";
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 blur-background-exclude = [
+  "class_g = 'Peek'",
+  "class_g = 'Pensela'",
+  "name = 'Drawing Board'",
   "window_type = 'dock'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'combo'",
+  "window_type = 'popup_menu'",
+  "window_type = 'utility'",
   "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c",
+  "_GTK_FRAME_EXTENTS@:c"
 ];
 
 #################################
@@ -437,6 +491,6 @@ wintypes:
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.95; }
-  dropdown_menu = { opacity = 0.95; }
+  popup_menu = { opacity = 1.0; }
+  dropdown_menu = { opacity = 1.0; }
 };
