--- a/home/config/picom/picom.conf
+++ b/home/config/picom/picom.conf
@@ -43,7 +43,7 @@ shadow-offset-y = -15
 # shadow-exclude = []
 shadow-exclude = [
   "class_g = 'Rofi'",
-  "_GTK_FRAME_EXTENTS@:c",
+  "_GTK_FRAME_EXTENTS@",
   # Removed to avoid no-shadow in modal dialog windows.
   "name = 'Notification'",
   "name = 'Plank'",
@@ -95,7 +95,7 @@ shadow-exclude = [
   "class_g ?= 'vokoscreen' && argb",
   "name = 'Área'",
   "name *= 'Cuenta regresiva'",
-  "_NET_WM_WINDOW_TYPE:a *= '_KDE_NET_WM_WINDOW_TYPE_OVERRIDE'"
+  "window_type = 'dropdown_menu'",
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -224,7 +224,7 @@ blur-method = "dual_kawase"
 #
 # blur-deviation = false
 #
-blur-strength = 12
+blur-strength = 6
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
@@ -254,18 +254,7 @@ blur-kern = "3x3box";
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
-blur-background-exclude = [
-  "class_g = 'Peek'",
-  "class_g = 'Pensela'",
-  "name = 'Drawing Board'",
-  "window_type = 'dock'",
-  "window_type = 'dropdown_menu'",
-  "window_type = 'combo'",
-  "window_type = 'popup_menu'",
-  "window_type = 'utility'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
+blur-background-exclude = [ ];
 
 #################################
 #       General Settings        #
@@ -494,3 +483,55 @@ wintypes:
   popup_menu = { opacity = 1.0; }
   dropdown_menu = { opacity = 1.0; }
 };
+
+rules: ({
+  match = "window_type = 'tooltip'";
+  fade = false;
+  shadow = true;
+  opacity = 0.75;
+  full-shadow = false;
+}, 
+{
+    match = "class_g = 'Rofi'";
+    shadow=false;
+
+},
+{  # GPT dropdown menu
+    match = "window_type = 'menu'";
+    shadow=false;
+    blur-background=false;
+},
+{
+    match = "window_type = 'dock'";
+    shadow=false;
+    blur-background=false;
+    corner-radius=0;
+},
+{
+  match = "window_type = '' ||"
+          "class_g = 'Peek' ||"
+          "class_g = 'Pensela' ||"
+          "name = 'Drawing Board' ||"
+          "window_type = 'dock' ||"
+          "window_type = 'dropdown_menu' ||"
+          "window_type = 'combo' ||"
+          "window_type = 'popup_menu' ||"
+          "window_type = 'utility' ||"
+          "window_type = 'desktop' ||"
+          "_GTK_FRAME_EXTENTS@";
+  opacity=1.0;
+  blur-background=false;
+},
+{
+  match = "window_type = 'dock' || "
+          "window_type = 'desktop'";
+  corner-radius = 0;
+}, 
+{
+  match = "name = 'Notification'   || "
+          "class_g = 'Conky'       || "
+          "class_g ?= 'Notify-osd' || "
+          "class_g = 'Cairo-clock' || "
+          "_GTK_FRAME_EXTENTS@";
+  shadow = false;
+})
