--- a/home/config/picom/picom.conf
+++ b/home/config/picom/picom.conf
@@ -96,6 +96,8 @@ shadow-exclude = [
   "name = 'Área'",
   "name *= 'Cuenta regresiva'",
   "window_type = 'dropdown_menu'",
+  "window_type = 'menu'",  # GTK dropdown menu
+  "_NET_WM_WINDOW_TYPE *= '_KDE_NET_WM_WINDOW_TYPE_OVERRIDE'"
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -202,7 +204,6 @@ rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
   # "window_type = 'popup_menu'",
-  "class_g = 'Rofi'"
 ];
 
 
@@ -254,7 +255,19 @@ blur-kern = "3x3box";
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
-blur-background-exclude = [ ];
+blur-background-exclude = [
+  "class_g = 'Peek'",
+  "class_g = 'Pensela'",
+  "name = 'Drawing Board'",
+  "window_type = 'dock'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'popup_menu'",
+  "window_type = 'menu'",  # GTK dropdown menu
+  "window_type = 'combo'",
+  "window_type = 'utility'",
+  "window_type = 'desktop'",
+  "_GTK_FRAME_EXTENTS@"
+];
 
 #################################
 #       General Settings        #
@@ -483,55 +496,3 @@ wintypes:
   popup_menu = { opacity = 1.0; }
   dropdown_menu = { opacity = 1.0; }
 };
-
-rules: ({
-  match = "window_type = 'tooltip'";
-  fade = false;
-  shadow = true;
-  opacity = 0.75;
-  full-shadow = false;
-}, 
-{
-    match = "class_g = 'Rofi'";
-    shadow=false;
-
-},
-{  # GPT dropdown menu
-    match = "window_type = 'menu'";
-    shadow=false;
-    blur-background=false;
-},
-{
-    match = "window_type = 'dock'";
-    shadow=false;
-    blur-background=false;
-    corner-radius=0;
-},
-{
-  match = "window_type = '' ||"
-          "class_g = 'Peek' ||"
-          "class_g = 'Pensela' ||"
-          "name = 'Drawing Board' ||"
-          "window_type = 'dock' ||"
-          "window_type = 'dropdown_menu' ||"
-          "window_type = 'combo' ||"
-          "window_type = 'popup_menu' ||"
-          "window_type = 'utility' ||"
-          "window_type = 'desktop' ||"
-          "_GTK_FRAME_EXTENTS@";
-  opacity=1.0;
-  blur-background=false;
-},
-{
-  match = "window_type = 'dock' || "
-          "window_type = 'desktop'";
-  corner-radius = 0;
-}, 
-{
-  match = "name = 'Notification'   || "
-          "class_g = 'Conky'       || "
-          "class_g ?= 'Notify-osd' || "
-          "class_g = 'Cairo-clock' || "
-          "_GTK_FRAME_EXTENTS@";
-  shadow = false;
-})
