--- a/home/config/picom/picom.conf
+++ b/home/config/picom/picom.conf
@@ -139,7 +139,7 @@ fade-out-step = 0.06;
 # fade-exclude = []
 
 # Do not fade on window open/close.
-# no-fading-openclose = false
+no-fading-openclose = true
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
@@ -183,6 +183,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # "100:class_g = 'Code'"
 opacity-rule = [
   "100:class_g = 'firefox'",
+  "100:class_g = 'Jellyfin Media Player'",
+  "100:class_g = 'Chromium-browser'",
   "100:class_g = 'kitty' && focused",
   "90:class_g = 'kitty' && !focused",
   "95:class_g = 'Code' && focused",
