No rounded corners for maximized windows

--- a/home-manager/config/picom/picom.conf
+++ b/home-manager/config/picom/picom.conf
@@ -206,6 +206,10 @@ rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
   # "window_type = 'popup_menu'",
+
+  # No rounded corners when maximized
+  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_MAXIMIZED_VERT'",
+  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_MAXIMIZED_HORZ'"
 ];
 
 
